# mempulse

./: .gitignore  Cargo.toml  README.md  mempool_mev_implementation.md
.github/workflows/: ci.yml
apps/web-ui/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
apps/web-ui/public/: runtime-config.js
apps/web-ui/scripts/: memory-compare.sh
apps/web-ui/src/: App.jsx  api-base.js  api-base.test.mjs  index.js  main.jsx  mainnet-filter.js  mainnet-filter.test.mjs  market-stats.js  market-stats.test.mjs  screen-mode.js  screen-mode.test.mjs  styles.css  tx-history.js  tx-history.test.mjs  ui-config.js  ui-config.test.mjs
artifacts/builder/: relay_trace_exhausted_failure.json  relay_trace_flaky_success.json  relay_trace_summary.json
artifacts/perf/: scheduler_pipeline.json  simulation_roundtrip.json  storage_snapshot.json  tx_pipeline_perf_baseline.json  tx_pipeline_perf_baseline_20260225T061928Z.json  tx_pipeline_perf_baseline_20260225T062017Z.json  tx_pipeline_perf_baseline_20260225T063444Z.json  tx_pipeline_perf_baseline_20260225T063514Z.json  tx_pipeline_perf_baseline_latest.json
artifacts/replay/: parity_report.json
artifacts/searcher/: backtest_summary.json
artifacts/ui-perf/: 20260226T111801Z-gate-summary.md  20260226T121613Z-gate-summary.md  20260226T123541Z-gate-summary.md
configs/: chain_config.json  protocol_registry.mainnet.json
crates/bench/: Cargo.toml
crates/bench/benches/: pipeline_latency.rs  scheduler_pipeline.rs  simulation_roundtrip.rs  storage_snapshot.rs
crates/bench/src/: lib.rs
crates/bench/tests/: scheduler_pipeline_perf.rs  simulation_roundtrip_perf.rs  storage_snapshot_perf.rs
crates/builder/: Cargo.toml
crates/builder/examples/: relay_trace_package.rs
crates/builder/src/: assembly.rs  lib.rs  relay_client.rs
crates/builder/tests/: assembly_relay_submission.rs  candidate_materialization.rs  incremental_assembly.rs  relay_submission_dry_run.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/tests/: id_newtypes.rs
crates/event-log/: Cargo.toml
crates/event-log/src/: lib.rs
crates/event-log/tests/: tx_schema_roundtrip.rs
crates/feature-engine/: Cargo.toml
crates/feature-engine/src/: lib.rs  registry.rs
crates/feature-engine/tests/: protocol_registry.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: devp2p_runtime.rs  lib.rs  live_rpc.rs  p2p.rs  rpc.rs  tx_decode.rs
crates/ingest/tests/: devp2p_runtime.rs  live_rpc_instance_state.rs  live_rpc_runtime_handle.rs
crates/mempool-state/: Cargo.toml
crates/mempool-state/src/: lib.rs
crates/node-runtime/: Cargo.toml
crates/node-runtime/src/: builder.rs  handle.rs  lib.rs
crates/node-runtime/tests/: runtime_lifecycle.rs  runtime_smoke.rs
crates/p2p-ingest/: Cargo.toml
crates/p2p-ingest/src/: lib.rs
crates/replay/: Cargo.toml
crates/replay/examples/: parity_report.rs
crates/replay/src/: lib.rs  mempool_state.rs
crates/replay/tests/: candidate_lifecycle_replay.rs  replay_cli.rs
crates/rpc-ingest/: Cargo.toml
crates/rpc-ingest/src/: lib.rs
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: lib.rs  live_rpc.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/scheduler/tests/: admission.rs  candidate_pipeline.rs  config_validation.rs  queue_transitions.rs  rehydration.rs
crates/searcher/: Cargo.toml
crates/searcher/examples/: backtest_summary.rs
crates/searcher/src/: lib.rs  scoring.rs  (+1 more)
crates/sim-engine/: Cargo.toml
crates/sim-engine/src/: lib.rs  state_provider.rs
crates/sim-engine/tests/: deterministic_replay.rs  failure_categorization.rs  rpc_backed_mode.rs  typed_errors.rs
crates/storage/: Cargo.toml
crates/storage/src/: backfill.rs  clickhouse_schema.rs  lib.rs  wal.rs
crates/storage/tests/: backfill.rs  global_sequencer_authority.rs  lifecycle_projection_authority.rs  parquet_export.rs  scan_events_cursor.rs  scheduler_snapshots.rs  wal_flush_throughput.rs  wal_recovery.rs
crates/tx-decode/: Cargo.toml
crates/viz-api/: Cargo.toml
crates/viz-api/src/: auth.rs  lib.rs  live_rpc.rs  stream_broadcast.rs
crates/viz-api/tests/: api_auth_and_limits.rs  api_chain_filters.rs  bin_bootstrap.rs  chain_config_file.rs  dashboard_snapshot_perf.rs  default_state_pure.rs  live_rpc_batch_fetch.rs  live_rpc_env_config.rs  live_rpc_fetch_decode.rs  live_rpc_pending_parse.rs  multi_chain_ingest_config.rs  opportunity_zero_copy.rs  queue_drop_policy.rs  replay_runtime_metrics.rs  runtime_ownership_cutover.rs  scheduler_bootstrap_rehydration.rs  scheduler_runtime_config.rs  scheduler_snapshot_writer.rs  stream_broadcast.rs  tx_pipeline_perf_baseline.rs
docker/clickhouse/: docker-compose.yml
docs/: mempool_mev_implementation.md
docs/architecture/: mempulse_backend_refactor_implementation_plan_v2.md  v2_architecture_diagram.md
docs/decisions/: 2026-03-06-scheduler-replacement-policy.md
docs/demo/: interview_demo.md  sample_output.md  v2_demo.md
docs/perf/: v2_baseline.md
docs/plans/: 2026-02-21-mev-infra-v2-implementation.md  2026-02-23-commercial-readiness-improvement-plan.md  2026-02-24-improvement.md  2026-02-25-internal-grpc-spike-notes.md  2026-02-25-transaction-handling-scale-implementation.md  2026-02-26-backend-modular-refactor-cutover.md  2026-02-26-backend-modular-refactor-implementation.md  2026-02-26-ui-performance-improvement-plan.md  2026-02-27-live-streaming-system-redesign.md  2026-03-09-backend-refactor-final-acceptance.md  2026-03-09-runtime-core-milestone-6-cutover.md  2026-03-11-rust-best-practices-refactor.md  v2_scope_kpi.md
docs/reports/: commercial_readiness_report.md  deterministic_replay_parity_report.md  mev_opportunity_backtest_summary.md  relay_dry_run_trace_package.md
docs/runbooks/: incident_response.md
ops/prometheus/: alerts.yml  prometheus.yml
scripts/: demo_v2.sh  generate_artifacts.sh  perf_regression_check.sh  perf_tx_pipeline_baseline.sh  profile_pipeline.sh  ui_perf_stress.sh  verify_commercial_readiness.sh  verify_phase_checks.sh  verify_static_checks.sh
(+74 files in other folders)
