[workspace]
members = [
  "crates/common",
  "crates/event-log",
  "crates/ingest",
  "crates/feature-engine",
  "crates/storage",
  "crates/viz-api",
  "crates/replay",
  "crates/sim-engine",
  "crates/searcher",
  "crates/builder",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
ahash = "0.8"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
hashbrown = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
revm = "22"
sha2 = "0.10"
