[package]
name = "bench"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
event-log = { path = "../event-log" }
searcher = { path = "../searcher" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "pipeline_latency"
harness = false
