[package]
name = "builder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
common = { path = "../common" }
hex = { workspace = true }
reqwest = { workspace = true }
searcher = { path = "../searcher" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sim-engine = { path = "../sim-engine" }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
