[package]
name = "node-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
runtime-core = { path = "../runtime-core" }

[dev-dependencies]
parking_lot = { workspace = true }
scheduler = { path = "../scheduler" }
storage = { path = "../storage" }
tokio = { workspace = true }
