[package]
name = "replay"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
common = { path = "../common" }
event-log = { path = "../event-log" }
hashbrown = { workspace = true }
sim-engine = { path = "../sim-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
