[package]
name = "rpc-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
common = { path = "../common" }
event-log = { path = "../event-log" }
hashbrown = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
