[package]
name = "runtime-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
builder = { path = "../builder" }
common = { path = "../common" }
event-log = { path = "../event-log" }
feature-engine = { path = "../feature-engine" }
futures = { workspace = true }
hashbrown = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
scheduler = { path = "../scheduler" }
searcher = { path = "../searcher" }
serde = { workspace = true }
serde_json = { workspace = true }
sim-engine = { path = "../sim-engine" }
storage = { path = "../storage" }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tracing = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
