[package]
name = "sim-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
auto_impl = { workspace = true }
common = { path = "../common" }
event-log = { path = "../event-log" }
revm = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
