[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
common = { path = "../common" }
event-log = { path = "../event-log" }
feature-engine = { path = "../feature-engine" }
hashbrown = { workspace = true }
reqwest = { workspace = true }
replay = { path = "../replay" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
