[package]
name = "viz-api"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
common = { path = "../common" }
event-log = { path = "../event-log" }
futures = { workspace = true }
hashbrown = { workspace = true }
replay = { path = "../replay" }
serde = { workspace = true }
serde_json = { workspace = true }
storage = { path = "../storage" }
tokio = { workspace = true }
tokio-tungstenite = "0.28"
tracing = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { workspace = true }

[dev-dependencies]
tower = "0.5"
